--- a/portfolio.css
+++ b/portfolio.css
@@ -14,11 +14,16 @@
     color: black;
 }
 
+body {
+    background-color: antiquewhite;
+}
+
 .bgimage {
     height: 100vh;
     background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20210324/pngtree-abstract-memphis-playful-portfolio-pink-image_593418.jpg);
     background-size: cover;
     position: relative;
+    background-attachment: fixed;
 }
 
 .title {
@@ -82,29 +87,29 @@
     padding-bottom: 4rem;
 }
 
-.social-icons {
-    font-size: 36px;
+.socials {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    right: 1%;
+    bottom: 50%;
+}
+
+.socicon {
+    width: 2rem;
+    height: 2rem;
+}
+
+.scroll-up {
+    position: fixed;
+    right: 0.5%;
+    bottom: 3%;
     cursor: pointer;
 }
 
-.fa-facebook:hover,
-.fa-instagram:hover,
-.fa-twitter:hover,
-.fa-linkedin:hover,
-.fa-twitch:hover {
-    color: #008000;
-}
-
-.fab {
-    color: #000000;
-}
-
-
-/* footer styling */
-
-#footer {
-    background-color: #808080;
-    text-align: center;
+.up-arrow {
+    width: 3rem;
+    height: 3rem;
 }
 
 .reveal {
